# joget-deployment-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  finalize_refactoring.py  pyproject.toml  test_form_creator_plugin.py  test_single_mdm.py  test_single_mdm_debug.py  trigger_existing_mdm.py
archive/outdated_docs/: CONTINUATION_GUIDE.md  REFACTORING_QUICK_GUIDE.md  REFACTORING_STATUS.md  REFACTORING_STATUS_REPORT.md  SESSION_CONTINUATION_SUMMARY.md  TODO.md
archive/refactoring_history/: DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENT_MAP.md  NEXT_STEPS.md  PROGRESS_TRACKER.md  QUICK_STATUS.md  REFACTORING_CONTINUATION_PLAN.md  REFACTORING_EXECUTIVE_SUMMARY.md  REFACTORING_FINALIZATION_PLAN.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS_DAY1.md  REFACTORING_SUMMARY.md  SESSION_COMPLETION_SUMMARY.md  refactoring_bootstrap.py  verify_refactoring.py
components/imm/forms/: imAgroDealer.json  imCampaign.json  imCampaignDistPt.json  imCampaignInput.json  imDistribItem.json  imDistribution.json  imEntitlement.json  imEntitlementItem.json
components/imm/mdm/data/: md44Input.csv  md44Input.json  md45DistribPoint.csv  md45DistribPoint.json  md46InputPackage.json  md47PackageContent.json
components/imm/mdm/forms/: md38InputCategory.json  md39CampaignType.json  md40DistribModel.json  md41AllocBasis.json  md42TargetCategory.json  md43DealerCategory.json  md44Input.json  md45DistribPoint.json  md47PackageContent.json
docs/: DEPLOYMENT_CLI_DESIGN.md  FORM_MANAGEMENT_API_PLUGIN_SPEC.md  IMM_DEPLOYMENT_REQUEST.md  INTERACTIVE_CLI_DESIGN.md  MANIFEST.in  MIGRATION_PROMPT.md  MODULE_DEPLOYMENT_PROMPT.md
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  migration_guide.rst  quickstart.rst
docs/source/api/: auth.rst  client.rst  database.rst  discovery.rst  exceptions.rst  models.rst
examples/: basic_usage.py  mdm_data_population_example.py  x1_form.json
scripts/: benchmark_repositories.py  fix_imm_mdm.py  migrate_farmer_forms.py
src/: migrate_to_modular.py
src/joget_deployment_toolkit/: __init__.py  auth.py  discovery.py  exceptions.py  inventory.py  models.py
src/joget_deployment_toolkit/cli/: __init__.py  analysis.py  display.py  interactive.py  main.py  models.py
src/joget_deployment_toolkit/cli/commands/: __init__.py  check.py  forms.py  migrate.py  status.py
src/joget_deployment_toolkit/client/: __init__.py  applications.py  base.py  data.py  database.py  datalists.py  forms.py  http_client.py  userviews.py
src/joget_deployment_toolkit/config/: __init__.py  loader.py  models.py  profiles.py  shared_loader.py  validator.py
src/joget_deployment_toolkit/database/: __init__.py  connection.py
src/joget_deployment_toolkit/database/repositories/: __init__.py  application_repository.py  base.py  datalist_repository.py  form_repository.py  userview_repository.py
src/joget_deployment_toolkit/loaders/: __init__.py  csv_loader.py
src/joget_deployment_toolkit/operations/: __init__.py  component_deployer.py  instance_migrator.py  mdm_deployer.py
src/tests/refactored/: test_config.py  test_database.py  test_refactored_client.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_repositories.py
tests/cli/: test_analysis.py  test_check.py  test_forms.py  test_interactive.py  test_status.py
tests/unit/: test_csv_loader.py
